(lang dune 1.11)
(name fp-syntax)
(version 0.0.0)

(generate_opam_files true)

(source (github facelesspanda/fp-syntax))
(license MIT)
(authors "Clément Busschaert")
(maintainers "clement.busschaert@gmail.com")

(package
 (name fp-syntax)
 (synopsis "Various operators for OCaml 4.08 and later")
 (description "Various operators for OCaml 4.08 and later")
 (depends dune))
